--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ and will contains playlist of the songs.-->
                     Popular Artist 
                 </h1>
                 <div class="popularArtistContent">
-                    <a href="#">
+                    <a href="singerPlay.html">
                         <div>
                             <img src="logo/arijitSingh.jfif " class="artistImage">
                             <div><i class="fas fa-play"></i></div>
@@ -445,7 +445,7 @@ and will contains playlist of the songs.-->
                         </div>
                     </a>
                     <!-- Second Artist -->
-                    <a href="#">
+                    <a href="singerPlay.html">
                         <div>
                             <img src="logo/nehaKakkar.jfif " class="artistImage">
                             <div><i class="fas fa-play"></i></div>
@@ -453,7 +453,7 @@ and will contains playlist of the songs.-->
                         </div>
                     </a>
                     <!-- Third Artist -->
-                    <a href="#">
+                    <a href="singerPlay.html">
                         <div>
                             <img src="logo/atifAslam.jfif " class="artistImage">
                             <div><i class="fas fa-play"></i></div>
@@ -461,7 +461,7 @@ and will contains playlist of the songs.-->
                         </div>
                     </a>
                     <!-- Fourth Artist -->
-                    <a href="#">
+                    <a href="singerPlay.html">
                         <div>
                             <img src="logo/kumarSanu.jfif " class="artistImage">
                             <div><i class="fas fa-play"></i></div>
@@ -469,7 +469,7 @@ and will contains playlist of the songs.-->
                         </div>
                     </a>
                     <!-- Fifth Artist -->
-                    <a href="#">
+                    <a href="singerPlay.html">
                         <div>
                             <img src="logo/himeshReshmaiya.jfif " class="artistImage">
                             <div><i class="fas fa-play"></i></div>
@@ -477,7 +477,7 @@ and will contains playlist of the songs.-->
                         </div>
                     </a>
                     <!-- Sixth Artist -->
-                    <a href="#">
+                    <a href="singerPlay.html">
                         <div>
                             <img src="logo/hritikRoshan.jfif " class="artistImage">
                             <div><i class="fas fa-play"></i></div>
@@ -485,7 +485,7 @@ and will contains playlist of the songs.-->
                         </div>
                     </a>
                     <!-- Seventh Artist -->
-                    <a href="#">
+                    <a href="singerPlay.html">
                         <div>
                             <img src="logo/shreyaGhosal.jfif " class="artistImage">
                             <div><i class="fas fa-play"></i></div>
@@ -493,7 +493,7 @@ and will contains playlist of the songs.-->
                         </div>
                     </a>
                     <!-- Eigth Artist -->
-                    <a href="#">
+                    <a href="singerPlay.html">
                         <div>
                             <img src="logo/manojTiwari.jfif " class="artistImage">
                             <div><i class="fas fa-play"></i></div>
@@ -501,7 +501,7 @@ and will contains playlist of the songs.-->
                         </div>
                     </a>
                     <!-- Ninth Artist -->
-                    <a href="#">
+                    <a href="singerPlay.html">
                         <div>
                             <img src="logo/neetiMohan.jfif " class="artistImage">
                             <div><i class="fas fa-play"></i></div>
